fix overflow problem in small devices

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
   height: 100vh;
   font-family: monospace;
   padding: 5px;
-  overflow: hidden;
+  overflow-x: hidden;
   
 }
 
